completed functionality for adding and deleting groups

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <tbody>
         <tr>
          <td>
-          <button onclick="createTable()">New Table</button>
+          <button onclick="createGroup()">New Group</button>
          </td>
         </tr>
        </tbody>
