refactored adding and deleting groups, can now add users to groups

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
   <div id="groupspage"> <!-- UI DECISION TO START ON GROUPS PAGE -->
    <h1>InstaGroups</h1>
     <div>
+     <h6 id="message"><h6>
+    </div>
+    <div>
       <table id="groups">
        <tbody>
         <tr>
