fixed name change bug from refactor

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
   <nav>
    <div>
-    <button onclick="home()">InstaGroups</button>
+    <button onclick="goHome()">InstaGroups</button>
     <button onclick="group()">Group</button>
     <button onclick="user()">User</button>
     <button onclick="search()">Search</button>
