view group functionality nearly working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="homepage"> <!-- UI DECISION TO START ON GROUPS PAGE -->
    <h1>InstaGroups</h1>
    <div>
-    <h6 id="message"><h6>
+    <h6 id="message"></h6>
    </div>
    <div>
     <table id="groups">
