--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <div id="homepage"> <!-- UI DECISION TO START ON GROUPS PAGE -->
    <h1>InstaGroups</h1>
    <div>
-    <h6 id="groupMessage"></h6>
+    <h6 id="homeMessage"></h6>
    </div>
    <div>
     <table id="groups">
      <tbody>
       <tr>
        <td>
-        <button onclick="createGroup('')">New Group</button>
+        <button onclick="createGroup('', '', -1)">New Group</button>
        </td>
       </tr>
      </tbody>
@@ -33,8 +33,13 @@
    </div>
   </div>
   <div id="grouppage" hidden>
-   <h1 id="group"></h1>
+   <div>
+    <h6 id="groupMessage"></h6>
+   </div>
+   <div>
+    <h1></h1>
     <table id="groupContents"></table>
+   </div>
   </div>
   <div id="userpage" hidden>
    <h1 id="user"></h1> <!-- NEED BETTER ORIGINAL USERPAGE WHEN BLANK, POSSIBLY SEARCH BUTTON? -->
@@ -50,8 +55,8 @@
      <input type="radio" name="type" value="people">People</input>
      <input type="radio" name="type" value="tags">Tags</input>
      <input type="radio" name="type" value="places">Places</input>
-   	 <input type="text" id="search" placeholder="Search">
-   	 <input type="submit" value="Search">
+   	 <input type="text" id="search" placeholder="Search"></input>
+   	 <input type="submit" value="Search"></input>
     </form>
    </div>
    <div>
