changing group name is now functional

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>InstaGroups</title>
-  <!--<link rel="stylesheet" type="text/css" href="styles.css">-->
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
  </head>
