--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </li>
    </ul>
   </nav>
-  <div id="homepage" class="container-fluid"> <!-- UI DECISION TO START ON GROUPS PAGE -->
+  <div id="homepage" class="container-fluid"> <!-- UI Decision: Start on InstaGroups page -->
    <h1>InstaGroups</h1>
    <div>
     <h4 id="homeMessage"></h4>
